OCP/deploy-template/guest2/tomcat7-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tomcat7
  namespace: guest2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat7
  template:
    metadata:
      labels:
        app: tomcat7
    spec:
      containers:
        - name: container
          image: 'docker.io/tomcat:jdk17'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
